@@ -5,12 +5,10 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
-import ru.rutmiit.models.entities.Assignment;
-import ru.rutmiit.models.entities.User;
+import ru.rutmiit.models.entities.*;
 import ru.rutmiit.models.enums.AssignmentStatus;
 import ru.rutmiit.models.enums.UserRole;
-import ru.rutmiit.repositories.AssignmentRepository;
-import ru.rutmiit.repositories.UserRepository;
+import ru.rutmiit.repositories.*;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
@@ -23,14 +21,24 @@ public class Init implements CommandLineRunner {
     private final PasswordEncoder passwordEncoder;
     private final String defaultPassword;
     private final AssignmentRepository assignmentRepository;
+//    private final GroupRepository groupRepository;
+    private final SubjectRepository subjectRepository;
+    private final SubmissionRepository submissionRepository;
 
     public Init(UserRepository userRepository,
                 PasswordEncoder passwordEncoder,
-                @Value("${app.default.password}") String defaultPassword, AssignmentRepository assignmentRepository) {
+                @Value("${app.default.password}") String defaultPassword,
+                AssignmentRepository assignmentRepository,
+//                GroupRepository groupRepository,
+                SubjectRepository subjectRepository,
+                SubmissionRepository submissionRepository) {
         this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
         this.defaultPassword = defaultPassword;
         this.assignmentRepository = assignmentRepository;
+//        this.groupRepository = groupRepository;
+        this.subjectRepository = subjectRepository;
+        this.submissionRepository = submissionRepository;
         log.info("Init компонент инициализирован");
         log.info("Пароль по умолчанию: {}", defaultPassword);
     }
@@ -38,17 +46,70 @@ public class Init implements CommandLineRunner {
     @Override
     public void run(String... args) {
         log.info("Запуск инициализации начальных данных");
+//        initGroups();
+        initSubjects();
         initUsers();
-        initializeAssignments();
+        initAssignments();
         log.info("Инициализация начальных данных завершена");
+    }
+
+//    private void initGroups() {
+//        if (groupRepository.count() == 0) {
+//            log.info("Создание групп...");
+//
+//            List<String> groups = Arrays.asList(
+//                    "УВП-312", "УВП-313", "УВП-314",
+//                    "ИТ-411", "ИТ-412",
+//                    "КН-211", "КН-212"
+//            );
+//
+//            for (String group : groups) {
+//
+//                groupRepository.save(group);
+//                log.info("Создана группа: {}", group);
+//            }
+//        } else {
+//            log.debug("Группы уже существуют, пропуск инициализации");
+//        }
+//    }
+
+    private void initSubjects() {
+        if (subjectRepository.count() == 0) {
+            log.info("Создание предметов...");
+
+            List<String> subjectNames = Arrays.asList(
+                    "Математика",
+                    "Программирование",
+                    "Базы данных",
+                    "Веб-технологии",
+                    "Алгоритмы и структуры данных",
+                    "Операционные системы",
+                    "Компьютерные сети"
+            );
+
+            for (String subjectName : subjectNames) {
+                Subject subject = Subject.builder()
+                        .name(subjectName)
+                        .build();
+                subjectRepository.save(subject);
+                log.info("Создан предмет: {}", subjectName);
+            }
+        } else {
+            log.debug("Предметы уже существуют, пропуск инициализации");
+        }
     }
 
     private void initUsers() {
         if (userRepository.count() == 0) {
             log.info("Создание пользователей по умолчанию...");
+
+            // Получаем группы для студентов
+            String group1 = "УВП-312";
+            String group2 = "УВП-313";
+
             initAdmin();
             initTeachers();
-            initStudents();
+            initStudents(group1, group2);
             log.info("Пользователи по умолчанию созданы");
 
             // Проверка паролей
@@ -63,22 +124,21 @@ public class Init implements CommandLineRunner {
         log.info("Хеш пароля для admin: {}", encodedPassword);
 
         var adminUser = User.builder()
-                .username("admin")
-                .password(encodedPassword)
+                .username("admin@rutmiit.ru")
                 .email("admin@rutmiit.ru")
+                .password(encodedPassword)
                 .fullName("Admin Adminovich")
-                .age(30)
                 .role(UserRole.ADMIN)
                 .build();
         userRepository.save(adminUser);
-        log.info("Создан администратор: admin");
+        log.info("Создан администратор: admin@rutmiit.ru");
     }
 
     private void initTeachers() {
-        List<Object[]> teachers = List.of(
-                new Object[]{"ivanov", "Иванов Иван Иванович", "ivanov@rutmiit.ru", 40},
-                new Object[]{"petrova", "Петрова Мария Сергеевна", "petrova@rutmiit.ru", 38},
-                new Object[]{"sidorov", "Сидоров Алексей Петрович", "sidorov@rutmiit.ru", 42}
+        List<Object[]> teachers = Arrays.asList(
+                new Object[]{"ivanov@rutmiit.ru", "Иванов Иван Иванович", UserRole.TEACHER},
+                new Object[]{"petrova@rutmiit.ru", "Петрова Мария Сергеевна", UserRole.TEACHER},
+                new Object[]{"sidorov@rutmiit.ru", "Сидоров Алексей Петрович", UserRole.TEACHER}
         );
 
         teachers.forEach(teacherData -> {
@@ -87,24 +147,24 @@ public class Init implements CommandLineRunner {
 
             User teacher = User.builder()
                     .username((String) teacherData[0])
+                    .email((String) teacherData[0])
                     .password(encodedPassword)
-                    .email((String) teacherData[2])
                     .fullName((String) teacherData[1])
-                    .age((Integer) teacherData[3])
-                    .role(UserRole.TEACHER)
+                    .role((UserRole) teacherData[2])
                     .build();
             userRepository.save(teacher);
             log.info("Создан преподаватель: {}", teacherData[0]);
         });
     }
 
-    private void initStudents() {
-        List<Object[]> students = List.of(
-                new Object[]{"student1", "Студентов Андрей Владимирович", "student1@rutmiit.ru", 22},
-                new Object[]{"student2", "Ученикова Екатерина Дмитриевна", "student2@rutmiit.ru", 21},
-                new Object[]{"student3", "Обученко Максим Олегович", "student3@rutmiit.ru", 23},
-                new Object[]{"student4", "Лабораторная Анна Сергеевна", "student4@rutmiit.ru", 20},
-                new Object[]{"student5", "Зачетов Денис Игоревич", "student5@rutmiit.ru", 24}
+    private void initStudents(String group1, String group2) {
+        List<Object[]> students = Arrays.asList(
+                new Object[]{"student1@rutmiit.ru", "Студентов Андрей Владимирович", group1},
+                new Object[]{"student2@rutmiit.ru", "Ученикова Екатерина Дмитриевна", group1},
+                new Object[]{"student3@rutmiit.ru", "Обученко Максим Олегович", group1},
+                new Object[]{"student4@rutmiit.ru", "Лабораторная Анна Сергеевна", group2},
+                new Object[]{"student5@rutmiit.ru", "Зачетов Денис Игоревич", group2},
+                new Object[]{"student6@rutmiit.ru", "Экзаменова Ольга Петровна", group2}
         );
 
         students.forEach(studentData -> {
@@ -113,15 +173,170 @@ public class Init implements CommandLineRunner {
 
             User student = User.builder()
                     .username((String) studentData[0])
+                    .email((String) studentData[0])
                     .password(encodedPassword)
-                    .email((String) studentData[2])
                     .fullName((String) studentData[1])
-                    .age((Integer) studentData[3])
                     .role(UserRole.STUDENT)
+                    .group((String) studentData[2])
                     .build();
             userRepository.save(student);
             log.info("Создан студент: {}", studentData[0]);
         });
+    }
+
+    private void initAssignments() {
+        if (assignmentRepository.count() == 0) {
+            log.info("Создание тестовых заданий...");
+
+            // Получаем необходимые данные
+            Subject mathSubject = subjectRepository.findByName("Математика").orElseThrow();
+            Subject programmingSubject = subjectRepository.findByName("Программирование").orElseThrow();
+            Subject dbSubject = subjectRepository.findByName("Базы данных").orElseThrow();
+
+            String group1 = "УВП-312";
+            String group2 = "УВП-313";
+
+            User teacher1 = userRepository.findByEmail("ivanov@rutmiit.ru").orElseThrow();
+            User teacher2 = userRepository.findByEmail("petrova@rutmiit.ru").orElseThrow();
+
+            // Задание 1: Математика
+            Assignment mathAssignment = Assignment.builder()
+                    .subject(mathSubject)
+                    .teacher(teacher1)
+                    .group(group1)
+                    .title("Домашнее задание по математике")
+                    .description("Решить задачи по дифференциальным уравнениям. Главы 1-3 учебника.")
+                    .createdAt(LocalDateTime.now().minusDays(5))
+                    .deadline(LocalDateTime.now().plusDays(7))
+                    .maxScore(100)
+                    .status(AssignmentStatus.ACTIVE)
+                    .build();
+
+            // Задание 2: Программирование
+            Assignment programmingAssignment = Assignment.builder()
+                    .subject(programmingSubject)
+                    .teacher(teacher2)
+                    .group(group1)
+                    .title("Лабораторная работа по Java")
+                    .description("Разработать REST API для системы управления заданиями. Использовать Spring Boot.")
+                    .createdAt(LocalDateTime.now().minusDays(3))
+                    .deadline(LocalDateTime.now().plusDays(14))
+                    .maxScore(100)
+                    .status(AssignmentStatus.ACTIVE)
+                    .build();
+
+            // Задание 3: Базы данных
+            Assignment dbAssignment = Assignment.builder()
+                    .subject(dbSubject)
+                    .teacher(teacher1)
+                    .group(group2)
+                    .title("Проектирование базы данных")
+                    .description("Спроектировать схему БД для интернет-магазина. Написать SQL-запросы.")
+                    .createdAt(LocalDateTime.now().minusDays(2))
+                    .deadline(LocalDateTime.now().plusDays(10))
+                    .maxScore(100)
+                    .status(AssignmentStatus.ACTIVE)
+                    .build();
+
+            // Задание 4: Просроченное задание
+            Assignment expiredAssignment = Assignment.builder()
+                    .subject(mathSubject)
+                    .teacher(teacher2)
+                    .group(group2)
+                    .title("Эссе по философии")
+                    .description("Написать эссе на тему 'Этика в современном мире'")
+                    .createdAt(LocalDateTime.now().minusDays(10))
+                    .deadline(LocalDateTime.now().minusDays(5))
+                    .maxScore(50)
+                    .status(AssignmentStatus.EXPIRED)
+                    .build();
+
+            // Задание 5: Веб-технологии
+            Subject webSubject = subjectRepository.findByName("Веб-технологии").orElseThrow();
+            Assignment webAssignment = Assignment.builder()
+                    .subject(webSubject)
+                    .teacher(teacher1)
+                    .group(group1)
+                    .title("Создание веб-приложения")
+                    .description("Разработать полноценное веб-приложение с использованием Spring MVC и Thymeleaf")
+                    .createdAt(LocalDateTime.now())
+                    .deadline(LocalDateTime.now().plusDays(21))
+                    .maxScore(150)
+                    .status(AssignmentStatus.ACTIVE)
+                    .build();
+
+            List<Assignment> assignments = Arrays.asList(
+                    mathAssignment,
+                    programmingAssignment,
+                    dbAssignment,
+                    expiredAssignment,
+                    webAssignment
+            );
+
+            assignmentRepository.saveAll(assignments);
+
+            // Создаем тестовые сдачи заданий
+            createTestSubmissions(assignments, group1, group2);
+
+            log.info("Создано {} тестовых заданий", assignments.size());
+            log.info("Статистика:");
+            log.info("  - Активных заданий: {}", assignments.stream()
+                    .filter(a -> a.getStatus() == AssignmentStatus.ACTIVE).count());
+            log.info("  - Просроченных: {}", assignments.stream()
+                    .filter(a -> a.getStatus() == AssignmentStatus.EXPIRED).count());
+        } else {
+            log.debug("Задания уже существуют, пропуск инициализации");
+        }
+    }
+
+    private void createTestSubmissions(List<Assignment> assignments, String group1, String group2) {
+        log.info("Создание тестовых сдач заданий...");
+
+        // Получаем студентов из групп
+        List<User> studentsGroup1 = userRepository.findAll().stream()
+                .filter(u -> u.getRole() == UserRole.STUDENT && u.getGroup() != null && u.getGroup().equals(group1))
+                .toList();
+
+        List<User> studentsGroup2 = userRepository.findAll().stream()
+                .filter(u -> u.getRole() == UserRole.STUDENT && u.getGroup() != null && u.getGroup().equals(group2))
+                .toList();
+
+        // Создаем сдачи для каждого задания
+        for (Assignment assignment : assignments) {
+            List<User> students;
+            if (assignment.getGroup().equals(group1)) {
+                students = studentsGroup1;
+            } else {
+                students = studentsGroup2;
+            }
+
+            // Для каждого студента создаем сдачу (кроме просроченного задания)
+            for (User student : students) {
+                if (assignment.getStatus() != AssignmentStatus.EXPIRED && Math.random() > 0.3) {
+                    Submission submission = Submission.builder()
+                            .assignment(assignment)
+                            .student(student)
+                            .filePath("test_file.txt")
+                            .submittedAt(LocalDateTime.now().minusDays((int)(Math.random() * 3)))
+                            .isLate(assignment.getDeadline().isBefore(LocalDateTime.now()))
+                            .feedback("Тестовый комментарий студента")
+                            .build();
+
+                    // Для некоторых сдач добавляем оценку
+                    if (Math.random() > 0.5) {
+                        submission.setScore((int)(Math.random() * assignment.getMaxScore()));
+                        submission.setFeedback("Хорошая работа, но есть замечания");
+                        submission.setGradedBy(assignment.getTeacher());
+                        submission.setGradedAt(LocalDateTime.now());
+                    }
+
+                    submissionRepository.save(submission);
+                    log.debug("Создана сдача для студента {} по заданию {}", student.getEmail(), assignment.getTitle());
+                }
+            }
+        }
+
+        log.info("Тестовые сдачи созданы");
     }
 
     private void checkPasswords() {
@@ -130,133 +345,7 @@ public class Init implements CommandLineRunner {
 
         userRepository.findAll().forEach(user -> {
             boolean matches = passwordEncoder.matches(defaultPassword, user.getPassword());
-            log.info("Пользователь: {}, пароль совпадает: {}", user.getUsername(), matches);
+            log.info("Пользователь: {}, пароль совпадает: {}", user.getEmail(), matches);
         });
-    }
-
-    private void initializeAssignments() {
-        log.info("Создание тестовых заданий...");
-
-        // Получаем преподавателей и студентов
-        List<User> teachers = userRepository.findByRole(UserRole.TEACHER);
-        List<User> students = userRepository.findByRole(UserRole.STUDENT);
-
-        if (teachers.isEmpty() || students.isEmpty()) {
-            log.warn("Нет преподавателей или студентов для создания заданий");
-            return;
-        }
-
-        User teacher1 = teachers.get(0);
-        User teacher2 = teachers.size() > 1 ? teachers.get(1) : teachers.get(0);
-
-        // Задание 1: Математика
-        Assignment mathAssignment = Assignment.builder()
-                .title("Домашнее задание по математике")
-                .description("Решить задачи по дифференциальным уравнениям. Главы 1-3 учебника.")
-                .criteria("""
-                        1. Корректность решения (0-2 балла)
-                        2. Полнота ответа (0-2 балла)
-                        3. Аккуратность оформления (0-1 балл)
-                        """)
-                .deadline(LocalDateTime.now().plusDays(7)) // Через 7 дней
-                .status(AssignmentStatus.ACTIVE)
-                .teacher(teacher1)
-                .assignedStudents(Arrays.asList(students.get(0), students.get(1), students.get(2)))
-                .build();
-
-        // Задание 2: Программирование
-        Assignment programmingAssignment = Assignment.builder()
-                .title("Лабораторная работа по Java")
-                .description("Разработать REST API для системы управления заданиями. Использовать Spring Boot.")
-                .criteria("""
-                        1. Корректность архитектуры (0-3 балла)
-                        2. Качество кода (0-2 балла)
-                        3. Полнота реализации (0-3 балла)
-                        4. Тестирование (0-2 балла)
-                        """)
-                .deadline(LocalDateTime.now().plusDays(14)) // Через 14 дней
-                .status(AssignmentStatus.ACTIVE)
-                .teacher(teacher2)
-                .assignedStudents(Arrays.asList(students.get(1), students.get(2), students.get(3)))
-                .build();
-
-        // Задание 3: Базы данных
-        Assignment dbAssignment = Assignment.builder()
-                .title("Проектирование базы данных")
-                .description("Спроектировать схему БД для интернет-магазина. Написать SQL-запросы.")
-                .criteria("""
-                        1. Нормализация БД (0-3 балла)
-                        2. Оптимальность запросов (0-2 балла)
-                        3. Документация (0-2 балла)
-                        """)
-                .deadline(LocalDateTime.now().plusDays(10)) // Через 10 дней
-                .status(AssignmentStatus.ACTIVE)
-                .teacher(teacher1)
-                .assignedStudents(students) // Все студенты
-                .build();
-
-        // Задание 4: Просроченное задание
-        Assignment expiredAssignment = Assignment.builder()
-                .title("Эссе по философии")
-                .description("Написать эссе на тему 'Этика в современном мире'")
-                .criteria("""
-                        1. Глубина раскрытия темы (0-3 балла)
-                        2. Структура работы (0-2 балла)
-                        3. Оригинальность мысли (0-3 балла)
-                        """)
-                .deadline(LocalDateTime.now().minusDays(5)) // Просрочено на 5 дней
-                .status(AssignmentStatus.EXPIRED)
-                .teacher(teacher2)
-                .assignedStudents(Arrays.asList(students.get(0), students.get(3)))
-                .build();
-
-        // Задание 5: Завершенное задание
-        Assignment completedAssignment = Assignment.builder()
-                .title("Презентация по маркетингу")
-                .description("Подготовить презентацию маркетинговой стратегии для стартапа")
-                .criteria("""
-                        1. Качество слайдов (0-2 балла)
-                        2. Содержательность (0-3 балла)
-                        3. Ораторское мастерство (0-2 балла)
-                        """)
-                .deadline(LocalDateTime.now().minusDays(2)) // Дедлайн 2 дня назад
-                .status(AssignmentStatus.COMPLETED)
-                .teacher(teacher1)
-                .assignedStudents(Arrays.asList(students.get(1), students.get(2)))
-                .build();
-
-        // Задание 6: Срочное задание
-        Assignment urgentAssignment = Assignment.builder()
-                .title("Тест по английскому языку")
-                .description("Пройдите онлайн-тест по грамматике английского языка")
-                .criteria("""
-                        1. Правильность ответов (1 балл за каждый правильный)
-                        2. Скорость выполнения (0-5 баллов)
-                        """)
-                .deadline(LocalDateTime.now().plusHours(24)) // Через 24 часа
-                .status(AssignmentStatus.ACTIVE)
-                .teacher(teacher2)
-                .assignedStudents(Arrays.asList(students.get(0), students.get(1)))
-                .build();
-
-        List<Assignment> assignments = Arrays.asList(
-                mathAssignment,
-                programmingAssignment,
-                dbAssignment,
-                expiredAssignment,
-                completedAssignment,
-                urgentAssignment
-        );
-
-        assignmentRepository.saveAll(assignments);
-
-        log.info("Создано {} тестовых заданий", assignments.size());
-        log.info("Статистика:");
-        log.info("  - Активных заданий: {}", assignments.stream()
-                .filter(a -> a.getStatus() == AssignmentStatus.ACTIVE).count());
-        log.info("  - Просроченных: {}", assignments.stream()
-                .filter(a -> a.getStatus() == AssignmentStatus.EXPIRED).count());
-        log.info("  - Завершенных: {}", assignments.stream()
-                .filter(a -> a.getStatus() == AssignmentStatus.COMPLETED).count());
     }
 }
